refactor to common Effect record